# ChangeLog for media-sound/rhythmbox
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.107 2007/10/28 20:52:07 compnerd Exp $

  28 Oct 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/rhythmbox-0.9.7-daap_fix.patch,
  -files/rhythmbox-0.9.7-daapsharing-fix.patch,
  -files/rhythmbox-0.9.7-excessive-notification.patch,
  -files/rhythmbox-0.9.8-as-needed.patch,
  -files/rhythmbox-0.9.8-multijob-fix.patch, -rhythmbox-0.9.7-r3.ebuild,
  -rhythmbox-0.9.8.ebuild, -rhythmbox-0.10.0.ebuild:
  Remove unused versions

*rhythmbox-0.11.2 (13 Oct 2007)

  13 Oct 2007; Rémi Cardona <remi@gentoo.org> +rhythmbox-0.11.2.ebuild:
  new version for Gnome 2.20

  18 Sep 2007; Daniel Gryniewicz <dang@gentoo.org> rhythmbox-0.10.1.ebuild:
  Warn if ipod is given withou hal; bug #191700

  01 Sep 2007; nixnut <nixnut@gentoo.org> rhythmbox-0.10.1.ebuild:
  Stable on ppc wrt bug 185186

  02 Aug 2007; Michael Sterrett <mr_bones_@gentoo.org>
  rhythmbox-0.9.7-r3.ebuild, rhythmbox-0.9.8.ebuild,
  rhythmbox-0.10.0.ebuild, rhythmbox-0.10.1.ebuild:
  correct dbus deps (bug #187369)

  25 Jul 2007; Christoph Mende <angelos@gentoo.org> rhythmbox-0.10.1.ebuild:
  Stable on amd64 wrt bug #185186

  22 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  rhythmbox-0.10.1.ebuild:
  stable x86, bug 185186

  17 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  rhythmbox-0.10.1.ebuild:
  Stable on sparc wrt #185186

  08 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
  rhythmbox-0.9.7-r3.ebuild, rhythmbox-0.9.8.ebuild,
  rhythmbox-0.10.0.ebuild, rhythmbox-0.10.1.ebuild:
  remove reference to old, removed dbus (bug #183696)

  15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  rhythmbox-0.10.0.ebuild:
  ppc stable, bug #162508

*rhythmbox-0.10.1 (08 Jun 2007)

  08 Jun 2007; Joe McCann <joem@gentoo.org> +rhythmbox-0.10.1.ebuild: