@@ -1,0 +1,3 @@
+MD5 6ab510d54654d2973f91b5d0de54f854 rhythmbox-0.10.1.tar.bz2 3408309
+RMD160 b2fdfc48aba957623ca141d45e8e1291a556bbf7 rhythmbox-0.10.1.tar.bz2 3408309
+SHA256 a303076477a9a7b6a226613a6f3b43f4641ce977357c9aa9652932dc0b9bbd16 rhythmbox-0.10.1.tar.bz2 3408309
