@@ -1,6 +1,14 @@
 # ChangeLog for media-sound/rhythmbox
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.107 2007/10/28 20:52:07 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.108 2007/10/28 21:15:49 compnerd Exp $
+
+*rhythmbox-0.11.2-r1 (28 Oct 2007)
+*rhythmbox-0.10.1-r1 (28 Oct 2007)
+
+  28 Oct 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  +rhythmbox-0.10.1-r1.ebuild, -rhythmbox-0.11.2.ebuild,
+  +rhythmbox-0.11.2-r1.ebuild:
+  revbumps to drop howl support (bug #183776)
 
   28 Oct 2007; Saleem Abdulrasool <compnerd@gentoo.org>
   -files/rhythmbox-0.9.7-daap_fix.patch,
